--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "version": "1.0.0",
   "author": "NYYU UAB",
   "dependencies": {
-    "@apollo/client": "^3.9.6",
+    "@apollo/client": "^3.10.1",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@gatsbyjs/reach-router": "^2.0.1",
     "@iconify/react": "^4.1.1",
-    "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.8.6",
-    "@mui/x-date-pickers": "^6.19.6",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.3.1",
     "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@stripe/react-stripe-js": "^2.5.1",
-    "@stripe/stripe-js": "^3.0.7",
-    "@tanstack/query-core": "^5.26.3",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
+    "@tanstack/query-core": "^5.32.0",
     "apollo-upload-client": "^18.0.1",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "babel-plugin-styled-components": "^2.1.4",
     "base64-cryptocurrency-icons": "^1.1.20",
     "bootstrap": "^5.3.3",
@@ -33,8 +33,8 @@
     "dotenv": "^16.4.5",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
-    "ethers": "^6.11.1",
-    "gatsby": "^5.13.3",
+    "ethers": "^6.12.0",
+    "gatsby": "^5.13.4",
     "gatsby-plugin-emotion": "^8.13.1",
     "gatsby-plugin-gatsby-cloud": "^5.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -53,7 +53,7 @@
     "graphql": "^16.8.1",
     "hash-wasm": "^4.11.0",
     "html-loader": "^5.0.0",
-    "html-react-parser": "^5.1.8",
+    "html-react-parser": "^5.1.10",
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
@@ -73,24 +73,24 @@
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.3",
     "random-names-generator": "^1.0.2",
-    "rc-slider": "^10.5.0",
-    "react": "^17.0.0 || ^18.0.0",
+    "rc-slider": "^10.6.2",
+    "react": "^18.3.1",
     "react-code-input": "^3.10.1",
     "react-cookie-consent": "^9.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
     "react-countdown-hook": "^1.1.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
-    "react-number-format": "^5.3.3",
-    "react-phone-number-input": "^3.3.9",
+    "react-number-format": "^5.3.4",
+    "react-phone-number-input": "^3.4.1",
     "react-places-autocomplete": "^7.3.0",
     "react-qr-code": "^2.0.12",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^7.0.0",
@@ -104,7 +104,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.71.1",
+    "sass": "^1.75.0",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -116,9 +116,9 @@
     "util": "^0.12.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "viem": "^2.7.22",
-    "wagmi": "^2.5.7",
-    "web3": "^4.6.0"
+    "viem": "^2.9.28",
+    "wagmi": "^2.6.0",
+    "web3": "^4.8.0"
   },
   "peerDependencies": {
     "@mui/material": "^5.8.6",
@@ -129,7 +129,7 @@
   "devDependencies": {
     "object.assign": "^4.1.5",
     "prettier": "^3.2.5",
-    "webpack": "^5.90.3"
+    "webpack": "^5.91.0"
   },
   "keywords": [
     "gatsby"
