--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@gatsbyjs/reach-router": "^2.0.1",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.8.6",
     "@mui/x-date-pickers": "^6.19.6",
     "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
-    "@tanstack/query-core": "^5.26.3",
+    "@tanstack/query-core": "^5.25.0",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.6.7",
     "babel-plugin-styled-components": "^2.1.4",
@@ -34,6 +34,7 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "ethers": "^6.11.1",
+    "fs": "^0.0.1-security",
     "gatsby": "^5.13.3",
     "gatsby-plugin-emotion": "^8.13.1",
     "gatsby-plugin-gatsby-cloud": "^5.13.1",
@@ -74,14 +75,14 @@
     "qrcode": "^1.5.3",
     "random-names-generator": "^1.0.2",
     "rc-slider": "^10.5.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
     "react-code-input": "^3.10.1",
     "react-cookie-consent": "^9.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
     "react-countdown-hook": "^1.1.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
@@ -115,9 +116,9 @@
     "util": "^0.12.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "viem": "^2.7.22",
+    "viem": "^2.7.20",
     "wagmi": "^2.5.7",
-    "web3": "^4.6.0"
+    "web3": "^4.5.0"
   },
   "peerDependencies": {
     "@mui/material": "^5.8.6",
