--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
-    "@mui/x-date-pickers": "^8.10.0",
+    "@mui/x-date-pickers": "^6.19.6",
     "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
     "@stripe/react-stripe-js": "^2.5.1",
@@ -28,7 +28,6 @@
     "crypto-browserify": "^3.12.0",
     "crypto-symbol": "^3.6.0",
     "dangerously-set-html-content": "^1.1.0",
-    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
@@ -64,6 +63,7 @@
     "node-sass": "^9.0.0",
     "npx-languages": "^1.0.2",
     "object-assign-polyfill": "^0.1.0",
+    "object.assign": "^4.1.5",
     "path": "^0.12.7",
     "polyfill": "^0.1.0",
     "popper.js": "^1.16.1",
@@ -77,6 +77,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
     "react-countdown-hook": "^1.1.3",
+    "react-day-picker": "^8.10.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -117,7 +118,6 @@
     "web3": "^4.5.0"
   },
   "devDependencies": {
-    "object.assign": "^4.1.5",
     "prettier": "^3.2.5",
     "webpack": "^5.90.3"
   },
