--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Push to public repo
         run: |
-          git config --global user.email "nima@golsharifi.com"
-          git config --global user.name "golsharifi"
+          git config --global user.email "info@orb.group"
+          git config --global user.name "optitor"
           git remote add public https://x-access-token:${{ secrets.PUBLIC_REPO_TOKEN }}@github.com/optitor/public.nyyu.io.git
           git push --force public HEAD:main
