--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Push to public repo
         run: |
           git config --global user.email "info@orb.group"
-          git config --global user.name "optitor"
+          git config --global user.name "golsharifi"
           git remote add public https://x-access-token:${{ secrets.PUBLIC_REPO_TOKEN }}@github.com/optitor/public.nyyu.io.git
           git push --force public HEAD:main
