--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -35,10 +35,13 @@ jobs:
           curl -s -H "Authorization: token $TOKEN" https://api.github.com/user
 
       - name: Push to public repo
-        env:
-          PUBLIC_REPO_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
         run: |
           git config --global user.email "info@orb.group"
           git config --global user.name "golsharifi"
-          git remote add public https://x-access-token:${PUBLIC_REPO_TOKEN}@github.com/optitor/public.nyyu.io.git
+
+          ENCODED_URL=$(echo "https://x-access-token:${PUBLIC_REPO_TOKEN}@github.com/optitor/public.nyyu.io.git" | jq -sRr @uri)
+          git remote add public "$ENCODED_URL"
+
           git push --force public HEAD:main
+        env:
+          PUBLIC_REPO_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
