--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-styled-components": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
@@ -124,7 +126,9 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "type-check": "tsc --noEmit",
-    "audit-safe": "npm audit --audit-level high"
+    "audit-safe": "npm audit --audit-level high",
+    "test-oauth-manual": "node scripts/test-oauth-manual.js",
+    "test-oauth-config": "node scripts/test-oauth-config.js"
   },
   "repository": {
     "type": "git",
